fix: fix property starting with underscore (#121)
